# engine

./: .gitignore  CMakeLists.txt  README.md  compile.ps1
docs/: Collision Detection.md  Installation.md  Window FSM.md
lib/: placeholder.txt
src/: Enemy.cpp  Enemy.hpp  FrameRate.cpp  FrameRate.hpp  Hitbox.cpp  Hitbox.hpp  Menu.cpp  Menu.hpp  MenuButton.cpp  MenuButton.hpp  Physics.cpp  Physics.hpp  Player.cpp  Player.hpp  Sprite.cpp  Sprite.hpp  StaticSprite.cpp  StaticSprite.hpp  engine.cpp  engine.h  main.cpp  testing.cpp
src/Game/: Background.cpp  Background.hpp  Game.cpp  Game.hpp
src/Menu/: Button.cpp  Button.hpp  Menu.cpp  Menu.hpp
src/Utils/: DeltatimeChecker.cpp  Utils.hpp
src/WindowStates/: GameState.cpp  GameState.hpp  MenuState.cpp  MenuState.hpp  State.cpp  State.hpp
